appId: com.photo77
---
- launchApp:
    clearState: true
- tapOn: "服务器地址"
- inputText: "http://192.168.1.10"
- assertVisible: "内网未加密"
- tapOn: "添加服务器"
- launchApp:
    clearState: true
- tapOn: "服务器地址"
- inputText: "http://8.8.8.8"
- assertVisible: "不允许使用未加密连接"
